# liquipedia-scripts

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg  tox.ini
liquipedia_scripts/: lp_ept_cups.py
liquipedia_scripts/data/: ept-cups-known-players.csv
liquipedia_scripts/tests/: test_lp_ept_cups.py
tools/: cynical  results-loop
