[metadata]
name = liquipedia-scripts
version = 0.1
description = Collections of scripts to interact with Liquipedia
long_description = file: README.md
long_description_content_type = text/markdown
author = Cyril Roelandt
author_email = tipecaml@gmail.com
license = BSD-3-Clause
url = https://github.com/Steap/liquipedia-scripts
requires_python = >= 3.9
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    mwclient
    requests

[options.extras_require]
test =
    pytest
    requests-mock

[options.entry_points]
console_scripts =
    lp-ept-cups = liquipedia_scripts.lp_ept_cups:main

[options.package_data]
liquipedia_scripts = data/ept-cups-known-players.csv
